--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,7 @@ table {
 .weight-barbell-sleeve
 {
 	height: 0.5rem;
-	width: 2.25rem;
+	width: 2.75rem;
 	border: 1px solid black;
 	padding: 0.2rem 3rem;
 	background-color: silver;
@@ -143,68 +143,67 @@ table {
 .new-weight{
 	border: 1px solid black;
 	border-radius: 3px;
-	margin: 1rem 0;
-	
 }
 
-.big{
-	height: 1rem;
 
-}
 .new-weight.red{
-	padding: 3rem 0.45rem;
-	min-width: 0.5rem;
+	padding: 0;
+	height: 7rem;
+	width: 1.2rem;
 }
 .new-weight.red.small{
-	padding: 1rem 0.05rem;
-	min-width: 0.2rem;
-	height: 0.7rem;
+	padding: 0;
+	width: 0.25rem;
+	height: 3.4rem;
 }
 
 .new-weight.blue{
-	padding: 3rem 0.4rem;
-	min-width: 0.4rem;
+	padding: 0;
+	height: 7rem;
+	width: 1rem;
 }
 .new-weight.blue.small{
-	padding: 0.85rem 0.05rem;
-	min-width: 0.2rem;
-	height: 0.7rem;
+	padding: 0;
+	width: 0.25rem;
+	height: 3.2rem;
 }
 
 .new-weight.yellow{
-	padding: 3rem 0.3rem;
-	min-width: 0.3rem;
+	padding: 0;
+	height: 7rem;
+	width: 0.9rem;
 }
 .new-weight.yellow.small{
-	padding: 0.8rem 0.05rem;
-	min-width: 0.2rem;
-	height: 0.7rem;
+	padding: 0;
+	width: 0.25rem;
+	height: 3rem;
 }
 
 .new-weight.green{
-	padding: 3rem 0.2rem;
-	min-width: 0.2rem;
+	padding: 0;
+	height: 7rem;
+	width: 0.8rem;
 }
 .new-weight.green.small{
-	padding: 0.75rem 0.05rem;
-	min-width: 0.2rem;
-	height: 0.6rem;
+	padding: 0;
+	width: 0.25rem;
+	height: 2.5rem;
 	
 }
 
 .new-weight.white.five-kg{
-	padding:1rem 0.1rem;
-	min-width: 0.1rem;
-	height: 1rem;
+	padding: 0;
+	width: 0.25rem;
+	height: 3rem;
 }
 .new-weight.white.small{
-	padding: 0.6rem 0.05rem;
-	min-width: 0.2rem;
-	height: 0.5rem;
+	padding: 0;
+	width: 0.2rem;
+	height: 2rem;
 }
 
 .small{
-	border-radius: 2px;
+	border-radius: 1px;
 }
 
 .new-weight.collar{
