--- a/styles.css
+++ b/styles.css
@@ -191,10 +191,11 @@ table {
 	
 }
 
-.new-weight.white.five-kg{
+.new-weight.white{
+	border-radius: 1px;
 	padding: 0;
 	width: 0.25rem;
-	height: 3rem;
+	height: 5rem;
 }
 .new-weight.white.small{
 	padding: 0;
@@ -211,6 +212,13 @@ table {
 	min-width: 1rem;
 	height: 0.3rem;
 	border-radius: 1px;
+}
+
+.new-weight.collar::before{
+	height: 5rem;
+	width: 3rem;
+	border-radius: 1px;
+	color: silver;
 }
 
 .new-weight:hover
